<resources>
    <string name="app_name">VkClient</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in_ez">Login</string>
    <string name="action_sign_in_force">Login with API</string>
    <string name="title_activity_client">Select option:</string>
    <string name="users_get">Get user info</string>
    <string name="friends_get">Get friends</string>
    <string name="title_activity_profile">Profile info:</string>
    <string name="birthday_profile_label">Birthday:</string>
    <string name="hometown_profile_label">Hometown:</string>
    <string name="relationship_status_label">Relationship status:</string>
    <string name="studied_at_profile_label">Studied at:</string>
    <string name="languages_profile_label">Languages:</string>
    <string name="parents_profile_label">Parents:</string>
    <string name="siblings_profile_label">Siblings:</string>
    <string name="friends_list_attivity_title">Friends list:</string>
    <string name="send_message">Send message</string>
    <string name="view_friends">Friends</string>
    <string name="wall_post">Wall post</string>
    <string name="message_send">Send</string>
    <string name="title_activity_send_message">Send message to:</string>
    <string name="title_activity_wall_post">Wall post to:</string>
    <string name="dialogs">Get dialogs</string>
    <string name="title_activity_dialogs">Dialogs history:</string>
    <string name="title_activity_single_dialog">Dialog</string>
    <string name="title_activity_photo_view">Photo view:</string>
    <string name="share">Share</string>
    <string name="like">Like</string>

    <string name="drawer_item_profile">My Profile</string>
    <string name="drawer_item_news">News feed</string>
    <string name="drawer_item_messages">Messages</string>
    <string name="drawer_item_friends">Friends</string>
    <string name="title_activity_news">News feed:</string>
    <string name="title_activity_wall">Wall:</string>
    <string name="drawer_close"></string>
    <string name="drawer_open">Select:</string>
    <string name="name_input_hint">name:</string>
    <string name="default_name_text">Wait please!</string>
    <string name="loading_text">Loading</string>
    <string name="not_set">not set</string>
    <string name="show_full_user_info">Show full user</string>
    <string name="hide_full_user_info">Hide full user</string>
    <string name="token_received">Token received</string>
    <string name="token_accepted">Token accepted</string>
    <string name="request_error">Error in request or upload</string>
    <string name="posted_successful">posted successful</string>
    <string name="wall_button_label">Wall</string>
</resources>
