<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:widget="http://schemas.android.com/apk/res-auto"
    tools:context="com.vkclient.activities.ProfileActivity"
    android:id="@+id/drawer_layout"
    style="@style/DrawerLayoutStyle">

    <ScrollView
      style="@style/ScrollViewSyle"
        android:id="@+id/svProfile">

        <RelativeLayout
            style="@style/ZeroPaddingLayoutStyle">

            <LinearLayout
                style="@style/ZeroPaddingLayoutStyle"
                android:orientation="vertical"
                android:layout_below="@+id/llInfo"
                android:id="@+id/llButtonsPanel">

                <Button
                    style="@style/CentralGravityButtonStyle"
                    android:text="@string/send_message"
                    android:id="@+id/btSendMessage" />

                <Button
                    style="@style/CentralGravityButtonStyle"
                    android:text="@string/wall_post"
                    android:id="@+id/btWallPost" />

                <Button
                    style="@style/CentralGravityButtonStyle"
                    android:text="@string/view_friends"
                    android:id="@+id/btProfileFriends" />
            </LinearLayout>

            <LinearLayout
                style="@style/ZeroPaddingLayoutStyle"
                android:orientation="horizontal"
                android:id="@+id/llInfo">

                <ImageView
                    android:layout_width="@dimen/profile_photo_width"
                    android:layout_height="@dimen/profile_photo_height"
                    android:id="@+id/ivProfilePhoto"
                    android:src="@drawable/ic_user100" />

                <LinearLayout
                    style="@style/ZeroPaddingLayoutStyle"
                    android:orientation="vertical"
                    android:paddingStart="5dp">
                    <TextView
                       style="@style/LargeLabel"
                        android:text="@string/default_name_text"
                        android:id="@+id/tvProfileName"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        style="@style/MiddleLabel"
                        android:id="@+id/tvProfileStatus"
                        android:layout_gravity="center_horizontal" />

                    <LinearLayout
                        style="@style/CentralHorizontalLayout"
                        android:id="@+id/llBirthDate">

                        <TextView
                            style="@style/SmallLabel"
                            android:text="@string/birthday_profile_label" />

                        <TextView
                            style="@style/SmallLabel"
                            android:id="@+id/tvProfileBirthDate" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/CentralHorizontalLayout"
                        android:id="@+id/llHomeTown">

                        <TextView
                            style="@style/SmallLabel"
                            android:text="@string/hometown_profile_label"/>

                        <TextView
                            style="@style/SmallLabel"
                            android:id="@+id/tvProfileTown" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/CentralHorizontalLayout"
                        android:id="@+id/llRelationships">

                        <TextView
                            style="@style/SmallLabel"
                            android:text="@string/relationship_status_label" />

                        <TextView
                            style="@style/SmallLabel"
                            android:id="@+id/tvRelationship" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/CentralHorizontalLayout"
                        android:id="@+id/llStudiedAt">

                        <TextView
                            style="@style/SmallLabel"
                            android:text="@string/studied_at_profile_label" />

                        <TextView
                            style="@style/SmallLabel"
                            android:id="@+id/tvStudiedAt" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/CentralHorizontalLayout"
                        android:id="@+id/llLanguages">

                        <TextView
                            style="@style/SmallLabel"
                            android:text="@string/languages_profile_label" />

                        <TextView
                            style="@style/SmallLabel"
                            android:id="@+id/tvLanguages" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <com.meetme.android.horizontallistview.HorizontalListView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:widget="http://schemas.android.com/apk/res-auto"
                android:id="@+id/lvPhotoFeed"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:divider="#878787"
                widget:dividerWidth="2dp"
                android:layout_below="@+id/llButtonsPanel"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </ScrollView>

    <ListView android:id="@+id/left_drawer"
        style="@style/DrawerStyle"/>

</android.support.v4.widget.DrawerLayout>
