<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/MainLayoutStyle"
        android:orientation="vertical"
        tools:context="com.vkclient.activities.ClientActivity">
            <Button
                android:id="@+id/btGetUserInfo"
                android:text="@string/users_get"
                style="@style/WideButtonStyle"/>
            <Button
                android:id="@+id/btGetFriends"
                android:text="@string/friends_get"
                style="@style/WideButtonStyle"/>
            <Button
                android:id="@+id/btGetDialogs"
                android:text="@string/dialogs"
                style="@style/WideButtonStyle"/>
    </LinearLayout>

    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#fff"/>
</android.support.v4.widget.DrawerLayout>