<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svProfile"
    style="@style/ScrollViewSyle">

    <RelativeLayout style="@style/ZeroPaddingLayoutStyle">

        <LinearLayout
            android:id="@+id/llButtonsPanel"
            style="@style/ZeroPaddingLayoutStyle"
            android:layout_below="@+id/llInfo"
            android:orientation="vertical">

            <Button
                android:id="@+id/btSendMessage"
                style="@style/CentralGravityButtonStyle"
                android:text="@string/send_message" />

            <Button
                android:id="@+id/btWallPost"
                style="@style/CentralGravityButtonStyle"
                android:text="@string/wall_post" />

            <Button
                android:id="@+id/btProfileFriends"
                style="@style/CentralGravityButtonStyle"
                android:text="@string/view_friends" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llInfo"
            style="@style/ZeroPaddingLayoutStyle"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivProfilePhoto"
                android:layout_width="@dimen/profile_photo_width"
                android:layout_height="@dimen/profile_photo_height"
                android:src="@drawable/ic_user100" />

            <LinearLayout
                style="@style/ZeroPaddingLayoutStyle"
                android:orientation="vertical"
                android:paddingStart="5dp">

                <TextView
                    android:id="@+id/tvProfileName"
                    style="@style/LargeLabel"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/default_name_text" />

                <TextView
                    android:id="@+id/tvProfileStatus"
                    style="@style/MiddleLabel"
                    android:layout_gravity="center_horizontal" />

                <com.vkclient.views.ProfileInfoLayoutView
                    android:id="@+id/piBirthDate"
                    style="@style/CentralHorizontalLayout" />

                <com.vkclient.views.ProfileInfoLayoutView
                    android:id="@+id/piTown"
                    style="@style/CentralHorizontalLayout" />

                <com.vkclient.views.ProfileInfoLayoutView
                    android:id="@+id/piRelationships"
                    style="@style/CentralHorizontalLayout" />

                <com.vkclient.views.ProfileInfoLayoutView
                    android:id="@+id/piEducation"
                    style="@style/CentralHorizontalLayout" />

                <com.vkclient.views.ProfileInfoLayoutView
                    android:id="@+id/piLanguages"
                    style="@style/CentralHorizontalLayout" />
            </LinearLayout>
        </LinearLayout>

        <com.meetme.android.horizontallistview.HorizontalListView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:widget="http://schemas.android.com/apk/res-auto"
            android:id="@+id/lvPhotoFeed"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/llButtonsPanel"
            android:divider="#878787"
            widget:dividerWidth="2dp" />
    </RelativeLayout>
</ScrollView>
